2005-04-07  Eric Anholt  <anholt@FreeBSD.org>

	* plugin/Makefile.am:
	Don't attempt to build the plugin or the associated player if
	WITH_MOZILLA is unset.

2005-04-07  David Schleef  <ds@schleef.org>

	* configure.ac: Switch to using GLOBAL_CFLAGS for -Wall and
	-Werror, so they get propograted everywhere.
	* gimp-loader/Makefile.am:
	* glib-compat/glib/Makefile.am:
	* libswfdec/Makefile.am:
	* libswfdec/jpeg/Makefile.am:
	* libswfdec/js/Makefile.am:
	* libswfdec/mpeg/Makefile.am:
	* pixbuf-loader/Makefile.am:
	* player/Makefile.am:
	* plugin/Makefile.am:
	* test/Makefile.am:

2005-04-07  David Schleef  <ds@schleef.org>

	* libswfdec/swf.c: (tag_func_ignore): Fix segfault.

2005-04-07  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions_tags.c: (action_new_object):
	Check if the class name of the object looked up during ActionNewObject
	matches the object's name.  If not, then it's probably js_ObjectClass
	(or is that js_FunctionClass?) and we're dealing with a class that was
	defined by the script and not a standard one.  Since these classes don't
	get their constructors found by JS_* functions, make a new object and
	call the constructor ourselves.  Also, use the "parent" field properly,
	I hope.

2005-04-05  David Schleef  <ds@schleef.org>

	* configure.ac: disable creating _stdint.h
	* libswfdec/Makefile.am: set CFLAGS correctly for js
	* libswfdec/art.c: use glib types
	* libswfdec/js/Makefile.am: create jsautocfg.h at compile time
	* libswfdec/js/jsautocfg.h: remove
	* libswfdec/js/jslibmath.h: disable math code that isn't slurped
	* libswfdec/swfdec_internal.h: don't include _stdint.h
	* libswfdec/swfdec_render.c: use glib types

2005-04-04  Eric Anholt  <anholt@FreeBSD.org>

	* .cvsignore:
	* configure.ac:
	* libswfdec/Makefile.am:
	* libswfdec/actions.c:
	* libswfdec/actions_builtin.c:
	* libswfdec/actions_tags.c:
	* libswfdec/js/.cvsignore:
	* libswfdec/js/INTEGRATION:
	* libswfdec/js/Makefile.am:
	* libswfdec/js/js.c:
	* libswfdec/js/js.msg: